2007-05-04  Jens Granseuer  <jensgr@gmx.net>

	* schemas/desktop_gnome_font_rendering.schemas.in: remove the dpi
	default value since g-s-d and the capplet ignore it anyway but gconf-editor
	doesn't know that (related to bug #378338)

2007-04-30  Jens Granseuer  <jensgr@gmx.net>

	* capplets/Makefile.am:
	* configure.in:
	add new appearance capplet to build system

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Generate a capplets/keybindings/gnome-keybindings.pc
	from the .in file

2007-04-30  Thomas Wood  <thos@gnome.org>

	* capplets/appearance/Makefile.am:
	* capplets/appearance/appearance-main.c:
	* capplets/appearance/appearance-themes.c:
	* capplets/appearance/appearance-themes.h:
	* capplets/appearance/appearance.glade:
	* capplets/appearance/appearance.h:

	Add some code for a new appearance capplet

2007-04-25  Jens Granseuer  <jensgr@gmx.net>

	* configure.in:
	* capplets/about-me/Makefile.am:
	* capplets/about-me/gnome-about-me-password.c:
	remove obsolete build stuff from the about-me capplet (bug #430219)

2007-04-23  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in:
	* NEWS: prepare for 2.19.1.

2007-04-23  George Kraft IV <gk4@austin.ibm.com>

	* configure.in:
	* capplets/default-applications/*: added A11Y applications to the
	default applications capplet.

2007-04-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: build libslab statically, to avoid conflicts with
	gnome-main-menu, which installs its .so and header files.

2007-03-21  Federico Mena Quintero  <federico@novell.com>

	Fix the gnome-settings-daemon part of
	https://bugzilla.novell.com/show_bug.cgi?id=217790 and
	http://bugzilla.gnome.org/show_bug.cgi?id=378338:  try to figure
	out the DPI value from the X server or the user's GConf settings.

	Should also fix https://bugzilla.novell.com/show_bug.cgi?id=240246.

	* gnome-settings-daemon/gnome-settings-xsettings.c (gnome_xft_settings_get): Call
	get_dpi_from_gconf_or_server() to figure out a reasonable DPI