@@ -1,0 +1,15 @@
+[Desktop Entry]
+Encoding=UTF-8
+_Name=Appearance
+_Comment=Customize the look of the desktop
+Exec=gnome-appearance-properties
+Icon=gnome-settings-theme
+Terminal=false
+Type=Application
+StartupNotify=true
+Categories=GNOME;GTK;Settings;DesktopSettings;
+OnlyShowIn=GNOME;
+X-GNOME-Bugzilla-Bugzilla=GNOME
+X-GNOME-Bugzilla-Product=gnome-control-center
+X-GNOME-Bugzilla-Component=Appearance
+X-GNOME-Bugzilla-Version=@VERSION@
