@@ -546,6 +546,7 @@ vfs-methods/fontilus/Makefile
 control-center.spec
 vfs-methods/fontilus/gnome-font-viewer.desktop.in
 vfs-methods/themus/themus-theme-applier.desktop.in
+capplets/appearance/gnome-appearance-properties.desktop.in
 capplets/font/font-properties.desktop.in
 capplets/keybindings/keybinding.desktop.in
 capplets/keybindings/gnome-keybindings.pc
