@@ -1,3 +1,8 @@
+2007-05-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am:
+	* gnome-appearance-properties.desktop.in.in: add a desktop file
+
 2007-05-06  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance.glade: make the Add Wallpaper and Remove buttons in the
