@@ -1,3 +1,7 @@
+2007-05-06  Jens Granseuer  <jensgr@gmx.net>
+
+	* configure.in: add desktop file for appearance capplet
+
 2007-05-04  Jens Granseuer  <jensgr@gmx.net>
 
 	* schemas/desktop_gnome_font_rendering.schemas.in: remove the dpi
